# iced_awkbot

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: rect_fill.rs  rectangle.rs  sidebar.rs
src/: lib.rs
src/common/: color_pattern.rs  defaults.rs  mod.rs
src/helpers/: mod.rs  rect_fill.rs
src/widgets/: mod.rs  rectangle.rs  sidebar.rs  sidebar_item.rs
